--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -5,18 +5,18 @@
 # -------------------------------------------------------------------
 name: Discord Reminder
 
-
 on:
   workflow_dispatch: # manual trigger
   schedule: # cron trigger
     - cron:  '0 12 * * *'
 
 jobs:
-  message:
+  build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Discord Webhook Action
       uses: tsickert/discord-webhook@v5.3.0
       with:
         webhook-url: ${{ secrets.WEBHOOK_URL }}
-        content: "Test"
+        raw-data: message.json
