--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -19,4 +19,4 @@ jobs:
       uses: tsickert/discord-webhook@v6.0.0
       with:
         webhook-url: ${{ secrets.WEBHOOK_URL }}
-        raw-data: message.json
+        raw-data: ./message.json
