--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -11,7 +11,7 @@ on:
     - cron:  '0 12 * * *'
 
 jobs:
-  build:
+  reminder:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -19,4 +19,5 @@ jobs:
       uses: tsickert/discord-webhook@v6.0.0
       with:
         webhook-url: ${{ secrets.WEBHOOK_URL }}
+        username: minkyeu
         raw-data: ./message.json
