--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -11,7 +11,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Discord Webhook Action
-      uses: tsickert/discord-webhook@v6.0.0
+      uses: MineBartekSA/discord-webhook@v2
       with:
-        webhook-url: ${{ secrets.WEBHOOK_URL }}
-        raw-data: ./component.json
+        webhook: ${{ secrets.WEBHOOK_URL }}
+        component: |
+          {
+            "type": 2,
+            "style": 5,
+            "label": "Link Button",
+            "url": "https://google.com/"
+          }
