--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -9,15 +9,21 @@ jobs:
   reminder:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Discord Webhook Action
+    - name: Send a message with a component in multiple rows
       uses: MineBartekSA/discord-webhook@v2
       with:
-        webhook: ${{ secrets.WEBHOOK_URL }}
+        webhook: ${{ secrets.APPLICATION_WEBHOOK }}
+        content: Some text
         component: |
-          {
-            "type": 2,
-            "style": 5,
-            "label": "Link Button",
-            "url": "https://google.com/"
-          }
+          - type: 1
+            components:
+              - type: 2
+                style: 5
+                label: First Row Link Button
+                url: https://google.com/
+          - type: 1
+            components:
+              - type: 2
+                style: 5
+                label: Second Row Link Button
+                url: https://github.com/
