--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -13,17 +13,5 @@ jobs:
       uses: MineBartekSA/discord-webhook@v2
       with:
         webhook: ${{ secrets.APPLICATION_WEBHOOK }}
-        content: Some text
-        component: |
-          - type: 1
-            components:
-              - type: 2
-                style: 5
-                label: First Row Link Button
-                url: https://google.com/
-          - type: 1
-            components:
-              - type: 2
-                style: 5
-                label: Second Row Link Button
-                url: https://github.com/
+        attachment: |
+          file: ./component.json
