--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -16,8 +16,11 @@ jobs:
         webhook: ${{ secrets.WEBHOOK_URL }}
         nodetail: true
         content: "Hey <@316911818725392384>"
-        title: "데일리 회고를 통해 하후를 마무리 해요😎"
+        title: "데일리 회고를 통해 하후를 마무리 해요 😎"
         description: |
+          성장의 길은 회고로부터 시작됩니다.
+          오늘 하루동안 잘한 점과 부족했던 점을 정리해보세요.
+          [노션 E2E 회고 링크](https://www.notion.so/91e3e82c27f84834827238824821500c?v=cd52f89ed2f842268d946647cae5211e&pvs=4)
         color: 0xff91a4?pvs=4"
         username: 데일리 회고 리마인드
         avatar_url: https://cdn.vectorstock.com/i/500p/02/75/smiling-emoticon-with-sunglasses-vector-7920275.jpg
