--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -16,12 +16,11 @@ jobs:
       with:
         webhook: ${{ secrets.WEBHOOK_URL }}
         nodetail: true
-        content: "평일 오후 7시 15분 알림 - <@${{ secrets.TEAM_MEMBER_1 }}> <@${{ secrets.TEAM_MEMBER_2 }}> <@${{ secrets.TEAM_MEMBER_3 }}> <@${{ secrets.TEAM_MEMBER_4 }}>"
+        # content: "평일 오후 7시 15분 알림 - <@${{ secrets.TEAM_MEMBER_1 }}> <@${{ secrets.TEAM_MEMBER_2 }}> <@${{ secrets.TEAM_MEMBER_3 }}> <@${{ secrets.TEAM_MEMBER_4 }}>"
+        content: "평일 오후 7시 30분 알림"
         title: "데일리 회고 리마인드 😎"
         description: |
-          오늘 하루동안 잘한 점과 부족했던 점을 정리해봐요
-          
-          - [노션 E2E 회고 링크](https://www.notion.so/91e3e82c27f84834827238824821500c?v=cd52f89ed2f842268d946647cae5211e&pvs=4)
+          오늘 하루동안 잘한 점과 부족했던 점을 정리해봅시다.
         color: 0xff91a4
         image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTD9hgqgq58uG2LbI5wkjaqPl_LntZ9k8o2Pg&s
         username: 리마인더
